# myrmion-graphrag

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  README.md  backends.py  codebase.env.example  codebase_server.py  consistency.py  consistency_readers.py  db-up.sh.example  doc_ledger.py  docker-compose.yml  ingest.py  lightrag.env.example  mcp_server.py  migrate-backend.sh.example  pyproject.toml  release-please-config.json  requirements-backends.txt  requirements-codebase.txt  requirements-dev.txt  requirements.txt  setup.sh
.claude/: settings.json
.github/workflows/: release-please.yml  smoke.yml
codebase_mcp/: __init__.py  config.py  gitutil.py  history.py  indexer.py  inventory.py  models.py  queries.py  resolver.py  sync.py
codebase_mcp/graph/: __init__.py  memory_store.py  neo4j_store.py  postgres_store.py  store.py
codebase_mcp/parser/: __init__.py  asp_preprocessor.py  base.py  python_ast.py  treesitter_parser.py  vb_parser.py
hooks/: pre-push.example  sync_on_edit.sh
tests/: conftest.py  test_backends.py  test_codebase_server.py  test_consistency.py  test_doc_ledger.py  test_gitutil.py  test_history.py  test_indexer.py  test_ingest.py  test_inventory.py  test_mcp_server.py  test_memory_store.py  test_parser.py  test_queries.py  test_sync.py  test_vb_parser.py
tests/fixtures/mini_codebase/: Account.cls  Legacy.bas  Modern.vb  Sample.java  app.py  orphan.py  page.asp  sample.js  svc.py  util.py
